--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ProjetoFinal C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(ProjetoFinal main.c clients.c clients.h utils.c utils.h articles.c articles.h)
+add_executable(ProjetoFinal main.c clients.c clients.h utils.c utils.h articles.c articles.h orders_management/shopping_cart.c orders_management/shopping_cart.h orders_management/orders.c orders_management/orders.h)
